# Backend/microservices/api.gateway/docs/swagger.yaml
@@ -33,6 +33,8 @@ definitions:
     type: object
   domain.ApiCompany:
     properties:
+      cnpj:
+        type: string
       created_at:
         type: string
       id:
@@ -43,8 +45,6 @@ definitions:
         type: string
       parent_id:
         type: integer
-      tax_id:
-        type: string
       trade_name:
         type: string
       updated_at:
@@ -52,6 +52,8 @@ definitions:
     type: object
   domain.ApiCompanyDetail:
     properties:
+      cnpj:
+        type: string
       created_at:
         type: string
       created_by:
@@ -64,8 +66,6 @@ definitions:
         type: string
       parent_id:
         type: integer
-      tax_id:
-        type: string
       trade_name:
         type: string
       updated_at:
@@ -475,13 +475,13 @@ definitions:
     type: object
   domain.CreateCompanyRequest:
     properties:
+      cnpj:
+        type: string
       legal_name:
         minLength: 3
         type: string
       parent_id:
         type: integer
-      tax_id:
-        type: string
       trade_name:
         type: string
     required:
@@ -659,6 +659,8 @@ definitions:
     type: object
   domain.UpdateCompanyRequest:
     properties:
+      cnpj:
+        type: string
       is_active:
         description: |-
           Sem `binding:"required"` de propósito: num bool, "required" exige true
@@ -669,8 +671,6 @@ definitions:
         type: string
       parent_id:
         type: integer
-      tax_id:
-        type: string
       trade_name:
         type: string
     required:
